# SLASH2.0

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
scripts/: coco.slurm  cotest.slurm  setup.sh  test.slurm
src/: CMakeLists.txt  config.h  main.cpp
src/doph/: DOPH.cpp  DOPH.h
src/hash/: srpHash.cpp  srpHash.h
src/lsh/: LSH.cpp  LSH.h
src/sketch/: Sketch.cpp  Sketch.h
src/slash/: Slash.cpp  Slash.h
src/util/: Eval.h  Reader.cpp  Reader.h  io.cpp
test/: CMakeLists.txt  LSHTest.cpp  SketchTest.cpp  main.cpp
